Add nova build/run, configure tag display.

--- a/configs/tags.ini
+++ b/configs/tags.ini
@@ -6,6 +6,6 @@ tags_field = tags
 
 template = tags.html
 
-url_path = {{ this.parent.url_path }}/{{ tag }}
+url_path = {{ this.parent.url_path }}tag/{{ tag }}
 
 ignore_missing = true
