Update blowfish theme, config for Hugo 0.121

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,9 +1,10 @@
-languageCode = "en"
-languageName = "English"
-displayName = "EN"
-isoCode = "en-US"
-weight = 1
-rtl = false
+[languages.en.params]
+  languageCode = "en"
+  languageName = "English"
+  displayName = "EN"
+  isoCode = "en-US"
+  weight = 1
+  rtl = false
 
 title = "Musings and Notes"
 # logo = "img/logo.png"
